# lv_web_emscripten

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lv_conf.h  main.c  mouse_cursor_icon.c
.agents/skills/lvgl-emscripten-build/: SKILL.md
.agents/skills/lvgl-emscripten-build/scripts/: build-and-serve.sh
skills/lvgl-emscripten-build/: SKILL.md
skills/lvgl-emscripten-build/scripts/: build-and-serve.sh
skills/lvgl-emscripten-test/: SKILL.md
skills/lvgl-webbuild/: SKILL.md
skills/lvgl-webbuild/scripts/: build-and-serve.sh
skills/lvgl-webview/: SKILL.md
skills/lvgl-webview/scripts/: test_html.py  test_text_input_steps.py
